fix text spacing

--- a/assets/scss/hero.scss
+++ b/assets/scss/hero.scss
@@ -125,6 +125,10 @@
     user-select: none;
     width: 36px;
 
+    @media (max-width: 500px) {
+      bottom: 250px;
+    }
+
     &:hover {
       opacity: .9;
       text-decoration: none;
@@ -204,6 +208,10 @@
   &._0 {
     width: 88px;
 
+    @media (max-width: 500px) {
+      width: 68px;
+    }
+
     > li {
       animation: alertOut .2s linear forwards;
     }
@@ -217,6 +225,10 @@
   // dart
   &._1 {
     width: 84px;
+
+    @media (max-width: 500px) {
+      width: 64px;
+    }
 
     > li {
       animation: alertOut .2s linear forwards;
@@ -232,6 +244,10 @@
   &._2 {
     width: 72px;
 
+    @media (max-width: 500px) {
+      width: 52px;
+    }
+
     > li {
       animation: alertOut .2s linear forwards;
     }
@@ -245,6 +261,10 @@
   // java
   &._3 {
     width: 78px;
+
+    @media (max-width: 500px) {
+      width: 58px;
+    }
 
     > li {
       animation: alertOut .2s linear forwards;
@@ -260,6 +280,10 @@
   &._4 {
     width: 94px;
 
+    @media (max-width: 500px) {
+      width: 74px;
+    }
+
     > li {
       animation: alertOut .2s linear forwards;
     }
@@ -273,6 +297,10 @@
   // node.js
   &._5 {
     width: 140px;
+
+    @media (max-width: 500px) {
+      width: 110px;
+    }
 
     > li {
       animation: alertOut .2s linear forwards;
@@ -288,6 +316,10 @@
   &._6 {
     width: 78px;
 
+    @media (max-width: 500px) {
+      width: 58px;
+    }
+
     > li {
       animation: alertOut .2s linear forwards;
     }
@@ -301,6 +333,10 @@
   // jquery
   &._7 {
     width: 126px;
+
+    @media (max-width: 500px) {
+      width: 86px;
+    }
 
     > li {
       animation: alertOut .2s linear forwards;
@@ -316,6 +352,10 @@
   &._8 {
     width: 98px;
 
+    @media (max-width: 500px) {
+      width: 78px;
+    }
+
     > li {
       animation: alertOut .2s linear forwards;
     }
@@ -329,6 +369,10 @@
   // django
   &._9 {
     width: 136px;
+
+    @media (max-width: 500px) {
+      width: 96px;
+    }
 
     > li {
       animation: alertOut .2s linear forwards;
@@ -344,6 +388,10 @@
   &._10 {
     width: 148px;
 
+    @media (max-width: 500px) {
+      width: 108px;
+    }
+
     > li {
       animation: alertOut .2s linear forwards;
     }
@@ -357,6 +405,10 @@
   // python
   &._11 {
     width: 134px;
+
+    @media (max-width: 500px) {
+      width: 104px;
+    }
 
     > li {
       animation: alertOut .2s linear forwards;
@@ -372,6 +424,10 @@
   &._12 {
     width: 224px;
 
+    @media (max-width: 500px) {
+      width: 144px;
+    }
+
     > li {
       animation: alertOut .2s linear forwards;
     }
@@ -385,6 +441,10 @@
   // .net
   &._13 {
     width: 86px;
+
+    @media (max-width: 500px) {
+      width: 66px;
+    }
 
     > li {
       animation: alertOut .2s linear forwards;
@@ -400,6 +460,10 @@
   &._14 {
     width: 100px;
 
+    @media (max-width: 500px) {
+      width: 80px;
+    }
+
     > li {
       animation: alertOut .2s linear forwards;
     }
@@ -414,6 +478,10 @@
   &._15 {
     width: 172px;
 
+    @media (max-width: 500px) {
+      width: 122px;
+    }
+
     > li {
       animation: alertOut .2s linear forwards;
     }
@@ -427,6 +495,10 @@
   // bash
   &._16 {
     width: 92px;
+
+    @media (max-width: 500px) {
+      width: 72px;
+    }
 
     > li {
       animation: alertOut .2s linear forwards;
